hphp/test/zend/good/Zend/tests/lsb_006.php.expectf

Fatal error: A type specifier is expected here. in %s/lsb_006.php on line 3
